--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 
 apply plugin : 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven' // 增加
-group='com.github.moduleTest'
+group='com.github.starpine'
 
 
 android {
