--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
-
-apply plugin : 'com.android.library'
+apply plugin : 'com.android.application'
 apply plugin: 'com.github.dcendents.android-maven' // 增加
-group='com.github.starpine'
+group = 'com.github.StarPine'
 
 
 android {
