--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven' // 增加
+apply plugin: 'maven-publish'
 group = 'com.github.StarPine'
 
 
