--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -30,10 +30,10 @@ android {
     }
 }
 
+
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'com.github.jitpack:android-example:1.0.1'
+//    implementation 'androidx.appcompat:appcompat:1.4.1'
+//    implementation 'com.google.android.material:material:1.4.0'
 
 }
